Revert "remove 8192128 for now -- using mceliece6960119f"
This reverts commit 7445da0fb93b9d8f247a708457293731e8969d63.

--- a/src/lib/mcleece/CMakeLists.txt
+++ b/src/lib/mcleece/CMakeLists.txt
@@ -23,7 +23,7 @@ add_library(mcleece SHARED ${SOURCES})
 
 target_link_libraries(mcleece_static
 
-	mceliece6960119f
+	mceliece8192128
 
 	getline
 	keccak
@@ -33,7 +33,7 @@ target_link_libraries(mcleece_static
 
 target_link_libraries(mcleece
 
-	mceliece6960119f
+	mceliece8192128
 
 	getline
 	keccak
